# CTNx

./: CMakeLists.txt  Changelog.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/: pull_request_template.md
.github/workflows/: alert.ps1  build.ps1  main-0.0.1.yml
.vcpkg/ports/libcocos2d/: ccstring.patch  glfw.patch  libcocos2dConfig.cmake.in  portfile.cmake  usage  vcpkg.json  win32.patch
.vcpkg/versions/: baseline.json
.vcpkg/versions/l-/: libcocos2d.json
docs/: how_to_install.md  readme.md  shortcuts.md
misc/: CTNx.ambient.toml  CTNx.toml  CTNx.voice.toml  version.rc.in
src/: audio.cpp  audio.h  cfg.cpp  cfg.h  cocos2d.cpp  cocos2d.h  crashdump.cpp  crashdump.h  dllmain.cpp  exports.h  game.cpp  game.h  gamehacks.cpp  gamehacks.h  globals.cpp  globals.h  hext.cpp  hext.h  log.cpp  log.h  patch.cpp  patch.h  plog.formatter.h  utils.cpp  utils.h  voice.cpp  voice.h  wine.h
src/audio/vgmstream/: vgmstream.cpp  vgmstream.h
